# GBAFire

./: .clangd  .gitignore  CMakeLists.txt  README.md  justfile
src/: main.cpp
src/core/: Fire.cpp  Fire.h  gfx.h
